2009-11-20  Larry Ewing  <lewing@novell.com>

	* runtime.cpp: Invalidate the window when removing a message
	layer.

2009-11-20  Larry Ewing  <lewing@novell.com>

	* grid.cpp (PostRender): use apply the layout clip when rendering
	the gridlines.

2009-11-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* managedtypeinfo.cpp: Use strcmp instead of g_strcmp0 since the latter
	isn't available in sled10.

2009-11-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* type.h.in: Generate P/Invoke for Types::RegisterType.

	* type.h:
	* cbinding.h: Regenerated.

2009-11-20  Larry Ewing  <lewing@novell.com>

	* textblock.cpp: Fix the dynamic property providers to subclass
	from FrameworkProvider so that layout actually works with these
	elements.  Change the min size hack until Jeff fixes it properly.

	Fixes DRT 269 (again).
	
2009-11-20  Chris Toshok  <toshok@ximian.com>

	* media.h,media.cpp (class Image): add ImageOpenedEvent.

	* enums.h,enums.cpp (enum TextHintingMode): add SL3 enum.

	* textoptions.h (class TextOptions): add this static SL3 class.

	* effect.h, effect.cpp: stub ShaderEffect and PixelShader.

2009-11-20  Larry Ewing  <lewing@novell.com>

	* frameworkelement.cpp (Measure): don't expand templates on items
	that aren't visible.

2009-11-20  Alan McGovern  <amcgovern@novell.com>

	* grid.cpp: Elements which span star rows and auto columns are
	  measured twice. The first time they are measured we only
	  want the desired width in order to calculate the size of the
	  Auto column, as such we need to ignore the value of the
	  desired height. This fixes the ScrollBar out of view issue
	  in ScrollViewer.

2009-11-19  Larry Ewing  <lewing@novell.com>

	* runtime.cpp: remove the manual fs message layout logic.

	* runtime.h: make the messages panels.
	
	* fullscreen.xaml: use grid layout rather than doing manual
	layout.

	* incomplete-support.xaml: rework the padding a little.

2009-11-19  Larry Ewing  <lewing@novell.com>
